# tag-memory

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: demo.py
src/tag_memory/: __init__.py  config.py  db.py  events.py  generator.py  retriever.py  schema.py  tags.py
