[project]
name = "tag-memory"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pymysql>=1.1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.uv]
dev-dependencies = ["pytest>=8.0", "pytest-asyncio>=0.23"]
